--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,48 @@
     color: red !important;
 }
 
+.user-ok{
+    
+}
+
+.user-warning {
+    color: yellow;
+}
+
+.user-problem {
+    color: orange;
+}
+
+.user-error {
+    color:red;
+}
+
+/*for modal*/
+.modal-blackout {
+    position: absolute;
+    top: 0;
+    left:0;
+    background-color: rgba(0,0,0,0.6);
+    z-index:10;
+  }
+  .modal-container {
+    padding: 20px;
+    position: absolute;
+    box-shadow:0px 2px 7px #292929;
+    border-radius:10px;
+    background-color: #f2f2f2;
+    border:1px solid #fff;
+    z-index:50;
+  }
+  .modal-close {
+    position: relative;
+    top:-18px;
+    left:50px;
+    float:right;
+    display:block;
+    height:50px;
+    width:50px;
+    cursor: pointer;
+  }
+  
+
